# HF1R0x-Firmware

./: .gitignore  CMakeLists.txt  Config.h  Config.h.in  LICENSE  Makefile.am  README.md  configure.ac
hat/: eeprom_settings.txt
include/: Config.h
include/hal/: Serial.h
include/helper/: BinaryStream.h  GenericStream.h  helper.h
include/hexabitz/: BOS.h  BOSFrame.h  BOSMessage.h  BOSMessageBuilder.h  Module.h  ModuleInfo.h  ProxyModule.h  Service.h
include/hexabitz-modules/: H01R0.h  H08R6.h
info/: wpa_supplicant.conf
output/pi3/: hexabitz-1.5-Linux.deb
output/pi4/: hexabitz-1.4-Linux.deb  hexabitz-1.5-Linux.deb
src/: Makefile.am
src/Demo/: demo-H01R0.cpp  demo.cpp
src/hal/: Serial.cpp
src/helper/: BinaryStream.cpp  GenericStream.cpp  helper.cpp
src/hexabitz/: BOS.cpp  BOS.h  BOSFrame.cpp  BOSMessage.cpp  BOSMessageBuilder.cpp  BOS_Message.cpp  BOS_Message.h  BOS_Porting.cpp  BOS_Porting.h  BOS_UART.c  Makefile.am  MessageCode..h  MessageCode.cpp  MessageCode.h  Module.cpp  ModuleInfo.cpp  ProxyModule.cpp  Service.cpp  wiringPi.c  wiringPi.h  wiringSerial.c  wiringSerial.h
src/hexabitz-modules/: H01R0.cpp  H08R6.cpp
src/main/: main.cpp
src/tools/: Makefile.am  demo-H01R0.cpp  demo-H08R6.cpp
